<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_fondo_degradado"
    android:orientation="vertical" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_010">

        <TextView
            android:id="@+id/lblTituloEmpresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="@string/empresa_mayusculas"
            android:textSize="@dimen/size_020"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_below="@+id/lblTituloEmpresa"
            android:layout_height="@dimen/size_001"
            android:background="@color/colorPrincipalSilos"/>

        <LinearLayout
            android:id="@+id/lblCifEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblTituloEmpresa"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/cif_empresa"
                android:textSize="@dimen/size_016"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtCifEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:textSize="@dimen/size_016"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lblNombreEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblCifEmpresa"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/nombre"
                android:textSize="@dimen/size_016"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtNombreEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:textSize="@dimen/size_016"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lblDireccionEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblNombreEmpresa"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/direccion_empresa"
                android:textSize="@dimen/size_016"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDireccionEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:textSize="@dimen/size_016"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lblProvinciaEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblDireccionEmpresa"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/provincia_empresa"
                android:textSize="@dimen/size_016"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtProvinciaEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:textSize="@dimen/size_016"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lblCodigoPostalEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblProvinciaEmpresa"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/size_010">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/codigo_postal"
                android:textSize="@dimen/size_016"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtCodigoPostalEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:textSize="@dimen/size_016"/>
        </LinearLayout>

        <TextView
            android:id="@+id/separador"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_001"
            android:layout_below="@+id/lblCodigoPostalEmpresa"
            android:background="@color/colorSecundarioSilos"/>

        <TextView
            android:id="@+id/lblTituloSilos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/separador"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="@string/silos_mayuscula"
            android:textSize="@dimen/size_016"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/lblSilos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/size_010"
            android:layout_below="@+id/lblTituloSilos">

            <TextView
                android:id="@+id/lblSilosPrincipales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/silos_principales"
                android:textSize="@dimen/size_011"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblSilosCorrectores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/silos_correctores"
                android:textSize="@dimen/size_011"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblSilosLiquidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/silos_liquidos"
                android:textSize="@dimen/size_011"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblSilosAlmacen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/silos_almacen"
                android:textSize="@dimen/size_011"
                android:textAlignment="center"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/lblSilosExpedicion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/silos_expedicion"
                android:textSize="@dimen/size_011"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/separador_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_001"
            android:layout_below="@+id/lblSilos"
            android:background="@color/colorSecundarioSilos"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/idRecycler"
            android:layout_below="@+id/separador_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</LinearLayout>