<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/size_024">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/size_020"
        android:paddingTop="@dimen/size_020"
        android:src="@drawable/img_logo_vertical"/>

    <EditText
        android:id="@+id/txtusuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_usuario"
        android:layout_alignParentTop="true"
        android:layout_marginTop="226dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="@dimen/size_016"/>

    <EditText
        android:id="@+id/txtclaveacesso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtusuario"
        android:layout_marginTop="@dimen/size_008"
        android:hint="@string/hint_clave"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="@dimen/size_016"/>

    <Button
        android:id="@+id/btniniciosesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/size_024"
        android:paddingBottom="@dimen/size_024"
        android:paddingTop="@dimen/size_024"
        android:text="@string/boton_inicio_sesion"
        android:textColor="@android:color/white"
        android:background="@color/colorSecundarioSilos"
        android:textStyle="bold"
        />

</RelativeLayout>